[package]
name = "cfs"
authors = ["Alex Andrade <pauloalbuquerque@acm.org>"]
description = "Quickly save and retrieve values for shell scripts"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
seahorse = "2.1.0"