[package]
name = "cfs"
authors = ["Alex Andrade <pauloalbuquerque@acm.org>"]
description = "Quickly save and retrieve values for shell scripts"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/minsk-dev/cfs"
repository = "https://github.com/minsk-dev/cfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
seahorse = "2.1.0"